fix(style): tighter whitespace in sidebar

--- a/frappe/public/less/sidebar.less
+++ b/frappe/public/less/sidebar.less
@@ -66,8 +66,7 @@ body[data-route^="Module"] .main-menu {
 	}
 
 	.sidebar-menu {
-		padding: 15px 0px;
-		border-bottom: 1px solid @light-border-color;
+		padding: 15px 0px 5px 0px;
 		margin: 0px;
 	}
 }
@@ -95,6 +94,7 @@ body[data-route^="Module"] .main-menu {
 
 	h6, .h6 {
 		margin-top: 0px;
+		margin-bottom: 7px;
 	}
 
 	> li {
